# pharma-inventory

./: .gitignore  create-users-table.sql  fix-password.sql  generate-hash.js  ml-improvement-tasks.json  package.json  pnpm-lock.yaml  run-drug-activity-migration.js  run-migration.js  run.sh  seed-suppliers-simple.js  temp-migration.mjs  test-auth.js  test-enhanced-reorder.js  turbo.json  update-user-roles.sql
apps/ml-service/: .env  .env.example  .gitignore  API_USAGE.md  README.md  check_env.py  compare_data_patterns.py  debug_csv.py  demo_real_data_models.py  deploy_real_data.py  pyproject.toml  requirements.txt  retrain_with_real_data.py  run.sh  setup.py  simple_retrain.py  start_service.py  test_adaptive_system.py  test_api.py  test_api_endpoints.py  test_connection.py  test_db_safety.py
apps/ml-service/models/: training_metrics.json
apps/ml-service/models/trained/: model_10_metronidazole_400mg.pkl  model_1_paracetamol_500mg.pkl  model_2_amoxicillin_250mg.pkl  model_3_metformin_500mg.pkl  model_4_amlodipine_5mg.pkl  model_5_omeprazole_20mg.pkl  model_6_artemether_lumefantrine_20_120mg.pkl  model_7_ors_sachets.pkl  model_8_ferrous_sulphate_200mg.pkl  model_9_diclofenac_50mg.pkl
apps/ml-service/src/: config.py  main.py
apps/ml-service/src/data/: generate_synthetic_data.py  process_real_data.py
apps/ml-service/src/models/: predict.py  test_predictions.py  train.py
apps/ml-service/src/pharma_ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: .env.local.example  generate-hash.cjs  middleware.ts  nextjs_test.json  package.json  tsconfig.json  (+4 more)
(+80 files in other folders)
